# afpg

./: CHANGELOG.md  README.md  afpg.cabal  default.nix  index.html  outline.txt
nix/: overrides.nix
src/: Afpg.hs
src/Afpg/: Examples.hs  Intro.hs
