cabal-version: 2.4
name:
  afpg
version:
  0.1
synopsis:
  afpg talks
description:
  afpg talks
homepage:
  https://github.com/chessai/afpg
bug-reports:
  https://github.com/chessai/afpg/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Education
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Afpg
    Afpg.Intro
    Afpg.Examples
  build-depends:
    , base >= 4.10.1 && < 4.13
    , transformers >= 0.5 && < 0.7
    , lucid-colonnade
    , colonnade
    , lucid
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/afpg.git
